--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 quinn-proto = { version = "0.9.2", default-features = false, features = [] }
-snow = { version = "0.9", features = ["risky-raw-split"] }
+noise-protocol = "0.1.4"
+noise-rust-crypto = "0.5"
 hkdf = { version = "0.12" }
 sha2 = { version = "0.10" }
 aes = { version = "0.8" }
